syntax = "proto3";

package land.gno.gnosocial.indexerservice.v1;

option go_package = "github.com/gnolang/gnosocial/tools/indexer-connect/api/gen/go";
option objc_class_prefix = "RTG";

// IndexerService is the service to interact with the Gnosocial Indexer
service IndexerService {
  rpc GetHomePosts(GetHomePostsRequest) returns (GetHomePostsResponse);
  // Hello is for debug purposes
  rpc Hello(HelloRequest) returns (HelloResponse);
  // HelloStream is for debug purposes
  rpc HelloStream(HelloStreamRequest) returns (stream HelloStreamResponse);
}

message GetHomePostsRequest {
  string userPostAddr = 1 [json_name = "UserPostAddr"];
  uint64 startIndex = 2 [json_name = "StartIndex"];
  uint64 endIndex = 3 [json_name = "EndIndex"];
}

message UserPost {
  string userPostAddr = 1 [json_name = "UserPostAddr"];
  uint64 postId = 2 [json_name = "PostId"];
}

message GetHomePostsResponse {
  repeated UserPost userPosts = 1 [json_name = "UserPosts"];
}

message HelloRequest {
	string name = 1 [json_name = "Name"];
}

message HelloResponse {
	string greeting = 1 [json_name = "Greeting"];
}

message HelloStreamRequest {
	string name = 1 [json_name = "Name"];
}

message HelloStreamResponse {
	string greeting = 1 [json_name = "Greeting"];
}

// The ErrCode enum defines errors for gRPC API functions. These are converted
// from the Go error types returned by gnoclient.
enum ErrCode {
  //----------------
  // Special errors
  //----------------

  // Undefined is the default value. It should never be set manually
  Undefined = 0;

  // TODO indicates that you plan to create an error later
  TODO = 1;
  // ErrNotImplemented indicates that a method is not implemented yet
  ErrNotImplemented = 2;
  // ErrInternal indicates an unknown error (without Code), i.e. in gRPC
  ErrInternal = 3;

  //----------------
  // Generic errors
  //----------------

  // Parameters and I/O errors

  ErrInvalidInput = 100;
  ErrMissingInput = 101;
  ErrSerialization = 102;
  ErrDeserialization = 103;
  ErrInitService = 104;
  ErrRunGRPCServer = 105;
}

message ErrDetails {
  repeated ErrCode codes = 1;
}
